# Raze

./: CMakeLists.txt  README.md
res/skull/: skull.mtl
src/: aabb.h  bvh.h  cam.h  camera.cpp  camera.h  color.cpp  color.h  common.h  config.h  constants.h  hittable.h  hittable_list.h  interval.cpp  interval.h  main.cpp  material.h  mesh.h  quad.h  random.cpp  random.h  ray.h  renderer.cpp  renderer.h  sphere.h  triangle.h  utility.h  vector3.h
